Fixing missing border in background gallery

--- a/app/common-styles/_actionBar.scss
+++ b/app/common-styles/_actionBar.scss
@@ -41,6 +41,11 @@
         & .action-bar-step{
             color: red;
         }
+
+        & .info{
+            color: black;
+        }
+
     }
 }
 
