--- a/app/pages/background/background-chooser-modal.scss
+++ b/app/pages/background/background-chooser-modal.scss
@@ -27,6 +27,6 @@
 }
 
 .chosen-file{
-    border-color: $mainBgdColor;
+    border-color: $mainBackgroundColor;
     border-width: 2;
 }
